ui(list): add preference mode toggle button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,6 +38,7 @@
     <color name="red_600">#E53935</color>
 
     <!-- Gray Palette -->
+    <color name="gray_100">#F5F5F5</color>
     <color name="gray_200">#EEEEEE</color>
     <color name="gray_600">#757575</color>
 </resources>
